Added web app manifest and .png icons

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 	<!-- PNG fallback favicons -->
 	<link rel="icon" type="image/png" href="./favicons/favicon_64.png" sizes="64x64" />
 	<link rel="icon" type="image/png" href="./favicons/favicon_128.png" sizes="128x128" />
+	<link rel="icon" type="image/png" href="./favicons/favicon_192.png" sizes="192x192" />
 	<link rel="icon" type="image/png" href="./favicons/favicon_256.png" sizes="256x256" />
 	<link rel="icon" type="image/png" href="./favicons/favicon_512.png" sizes="512x512" />
+
+	<!-- Web app manifest -->
+	<link rel="manifest" href="./manifest.json">
 
 	<!-- Link to keys.css made by michaelhue @https://github.com/michaelhue (https://github.com/michaelhue/keyscss | MIT) -->
 	<link rel="stylesheet" href="keys.css">
