Added ICO favicon and instructions on how to create it

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 	<link rel="icon" type="image/png" href="./favicons/favicon_256.png" sizes="256x256" />
 	<link rel="icon" type="image/png" href="./favicons/favicon_512.png" sizes="512x512" />
 
+	<!-- ICO fallback favicons -->
+	<link rel='icon' type='image/x-icon' href='./favicons/favicon.ico' />
+
 	<!-- Web app manifest -->
 	<link rel="manifest" href="./manifest.json">
 
