Added source code link

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 	<!-- Enable modern web app shortcut on mobile and desktop devices -->
 	<meta name="application-name" content="Stopwatch" />
 	<meta name="theme-color" content="#e5e5e5" />
-	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="mobile-web-app-capable" content="yes" />
 
 	<!-- Vector graphic favicon -->
-	<link rel="icon" type="image/svg+xml" href="./favicons/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="./favicons/favicon.svg" />
+
+	<!-- ICO fallback favicons -->
+	<link rel='icon' type='image/x-icon' href='./favicons/favicon.ico' />
 
 	<!-- PNG fallback favicons -->
 	<link rel="icon" type="image/png" href="./favicons/favicon_64.png" sizes="64x64" />
@@ -30,9 +33,6 @@
 	<link rel="icon" type="image/png" href="./favicons/favicon_192.png" sizes="192x192" />
 	<link rel="icon" type="image/png" href="./favicons/favicon_256.png" sizes="256x256" />
 	<link rel="icon" type="image/png" href="./favicons/favicon_512.png" sizes="512x512" />
-
-	<!-- ICO fallback favicons -->
-	<link rel='icon' type='image/x-icon' href='./favicons/favicon.ico' />
 
 	<!-- Web app manifest -->
 	<link rel="manifest" href="./manifest.json">
@@ -82,7 +82,7 @@
 
 	<!-- Footer of website -->
 	<footer>
-		<p>Made in 2018</p>
+		<p>Made in 2018 - Source code: <a href="https://github.com/AnonymerNiklasistanonym/StopwatchWebApp">GitHub</a></p>
 		<p class="beta_desktop">(Download the current state as JSON file with the key <kbd class="light">a</kbd>)</p>
 	</footer>
 </body>
