Move downloading of data as a new button in new section
This means it's now also possible on mobile.

Closes #1

--- a/index.html
+++ b/index.html
@@ -78,12 +78,16 @@
 			<h2>Laps</h2>
 			<ul id="stopwatchLapsUl"></ul>
 		</section>
+		<!-- Stopwatch data control buttons section -->
+		<section>
+			<h2>Data</h2>
+			<ul id="stopwatchDataControlsUl"></ul>
+		</section>
 	</main>
 
 	<!-- Footer of website -->
 	<footer>
 		<p>Made in 2018 - Source code: <a href="https://github.com/AnonymerNiklasistanonym/StopwatchWebApp">GitHub</a></p>
-		<p class="beta_desktop">(Download the current state as JSON file with the key <kbd class="light">a</kbd>)</p>
 	</footer>
 </body>
 
