Add PWA features
- Service Worker that caches all files and makes app installable (offline use)
- Native share API

Minor fixes:
- Fix bad index when removing laps when index changes

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 	<link rel="manifest" href="./manifest.json">
 
 	<!-- Link to keys.css made by michaelhue @https://github.com/michaelhue (https://github.com/michaelhue/keyscss | MIT) -->
-	<link rel="stylesheet" href="keys.css">
+	<link rel="stylesheet" href="./keys.css">
 
 	<!-- Custom style for stopwatch(.js) -->
-	<link rel="stylesheet" href="stopwatch.css">
+	<link rel="stylesheet" href="./stopwatch.css">
 
 	<!-- Custom style for web page [Needs to be after everything to override the styles] -->
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="./styles.css">
 
 	<!-- Custom script for stopwatch -->
-	<script src="stopwatch.js"></script>
+	<script src="./stopwatch.js"></script>
 
 	<!-- Script with implementation of stopwatch.js -->
-	<script src="script.js"></script>
+	<script src="./script.js"></script>
 
 </head>
 
