--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 	<!-- Footer of website -->
 	<footer>
-		<p>Made in 2018 - Source code: <a href="https://github.com/AnonymerNiklasistanonym/StopwatchWebApp">GitHub</a></p>
+		<p>Made in 2018 - Source code: <a href="https://github.com/AnonymerNiklasistanonym/StopwatchWebApp">GitHub</a> (v1.1.4)</p>
 	</footer>
 </body>
 
